# alfred

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: deploy.yml
src/: .env  commands.rs  main.rs
src/commands/: convert.rs  imdb.rs  mod.rs
