[package]
name = "alfred"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12"
tokio = { version = "1.36.0 ", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
rusty_ffmpeg = "0.13.3+ffmpeg.6.1"
log = "0.4.20"
dotenv = "0.15.0"
chrono = "0.4.31"
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3.9.0"
http = "0.2.9"
